# mle-ds-interview

./: README.md  pyproject.toml  test_data.csv  train_data.csv
helpers/: generate_data.py
test/: test_unit.py
